syntax = "proto3";

option csharp_namespace = "PRN231_Ass3_TranVuKimAnh.Protos";

package book;

message GetByIdRequest {
	int32 id = 1;
}

message GetByIdResponse  {
	int32 id = 1;
    string ISBN = 2;
    string title = 3;
    string author = 4;
    float price = 5;
    message Location { 
        int32 book_id = 1;
        string city = 2;
        string street = 3;
    }
    int32 press_id = 6;
    message Press { 
        int32 id = 1;
        string name = 2; 
        string category = 3;
    }
    Location location = 7;
    Press press= 8;
}

message GetAllRequest {
	optional int32 page = 1;
    optional int32 pageSize = 2;
    optional string search = 3;
}

message GetAllResponse {
    int32 page = 1;
    int32 pageSize = 2;
    int32 totalPage = 3;
    int32 total = 4;
    repeated GetByIdResponse items = 5;
}

message CreateRequest {
    string ISBN = 2;
    string title = 3;
    string author = 4;
    float price = 5;
    message Location { 
        string city = 2;
        string street = 3;
    }
    int32 press_id = 6;
    Location location = 7;

}

message CreateResponse {
    bool success = 1;
}

message UpdateRequest {
    int32 id = 1;
    string ISBN = 2;
    string title = 3;
    string author = 4;
    float price = 5;
    message Location { 
        string city = 2;
        string street = 3;
    }
    int32 press_id = 6;
    Location location = 7;
}

message UpdateResponse {
    bool success = 1;
}

message DeleteRequest {
    int32 id = 1;
}

message DeleteResponse {
    bool success = 1;
}

service GrpcBook {
	rpc GetById (GetByIdRequest) returns (GetByIdResponse);

    rpc GetAll (GetAllRequest) returns (GetAllResponse);

    rpc Create (CreateRequest) returns (CreateResponse);

    rpc Update (UpdateRequest) returns (UpdateResponse);

    rpc Delete (DeleteRequest) returns (DeleteResponse);
}